--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>ระบบจัดการสาระสนเทศการฝึกประสบการณ์วิชาชีพ</title>
+
+
 </head>
 
 <body>
@@ -41,6 +43,7 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
